--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -243,7 +243,7 @@
   "codex.form.original.instincts": " ",
 
   "codex.form.axolotl0.title": "\nПроклятие видоизменило ваше тело. Вы чувствуете сильную тягу к воде",
-  "codex.form.axolotl0.appearance": "Бледно-красные образования, похожие на листья водорослей или жвабры, выросли по бокам щёк. Они постоянно влажные и, похоже, помогают вам дышать в водной среде\nНа конечностях и новом хвосте вы можете заметить полупрозрачные плавники\nВаша кожа покрыта влагой",
+  "codex.form.axolotl0.appearance": "Бледно-красные образования, похожие на листья водорослей или жабры, выросли по бокам щёк. Они постоянно влажные и, похоже, помогают вам дышать в водной среде\nНа конечностях и новом хвосте вы можете заметить полупрозрачные плавники\nВаша кожа покрыта влагой",
   "codex.form.axolotl0.pros": "Благодаря изменениям в вашей дыхательной системы вы можете дольше находиться под водой\nВы слегка быстрее передвигаетесь в воде, чем раньше",
   "codex.form.axolotl0.cons": "К вашей коже постоянно прилипают частицы пыли. Из-за этого вы медленнее передвигаетесь по суше",
   "codex.form.axolotl0.instincts": "Вы жаждите окунуться в воду\nВы очень сильно хотите находиться в пышных пещерах",
