补充Bat2缺失的 "codex.form.shape-shifter-curse.bat_2.instincts"

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -278,7 +278,7 @@
     "codex.form.shape-shifter-curse.bat_2.appearance": "你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用笨重的工具和武器\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n在阴冷的洞窟中，你身体上覆盖的绒毛可以有效维持温暖",
     "codex.form.shape-shifter-curse.bat_2.pros": "你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中",
     "codex.form.shape-shifter-curse.bat_2.cons": "你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了",
-    "codex.form.shape-shifter-curse.bat_2.instincts": " ",
+    "codex.form.shape-shifter-curse.bat_2.instincts": "在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？",
     "codex.form.shape-shifter-curse.bat_3.title": "\n对于现在的你而言，一处凉爽而黑暗的洞窟可能更适合作为你的新家..",
     "codex.form.shape-shifter-curse.bat_3.appearance": "细密的绒毛完全覆盖了你的身体，近乎与头部等大的双耳帮助你定位四周的环境，让你不会遗漏周围哪怕最细微的声响\n你的前肢进一步延伸，为巨大的膜翼留出空间。如果你愿意的话，你可以用膜翼将你的身体完全包覆起来\n附有钩爪的前爪与后足让你可以与你的同类一样攀附在墙壁上，或者倒挂在洞穴的穹顶下\n你的身体已经完全为了飞行与滑翔而特化。你的后足不再能够支撑起身体的重量，只能以近乎四足的姿态在地面上缓慢移动",
     "codex.form.shape-shifter-curse.bat_3.pros": "新形成的钩爪给了你攀附与倒挂的能力：\n\n在空中时，你可以在空手情况下右键“使用”方块的侧表面来攀附在其上。攀附过程中，可以向瞄准方向按下空格键来蹬墙高速滑翔过去\n在空中时，你可以在空手情况下右键“使用”方块的下表面来将自己倒挂上去。倒挂过程中，你的生命值会缓慢恢复\n巨大的膜翼让你能够在空中高速滑翔。你可以在疾跑的同时跳跃来高速向前飞行。即使在空中时，你也可以按下疾跑键来加快滑翔速度\n你现在可以在黑暗中清晰地分辨事物\n坚硬而有力的前爪提升了你的近战伤害，而且还让你可以徒手高速挖掘方块，并正常收获掉落物\n通过扇动膜翼，你可以跳的更高，从空中缓慢降落。自然，它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高",
