修复#91 + 修复能力显示异常

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -188,10 +188,10 @@
     "effect.shape-shifter-curse.to_psi_sp_effect": "PSI",
     "effect.shape-shifter-curse.to_chi_sp_effect": "CHI",
     "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
-    "power.origins.form_allay_sp_amethyst_shard_only.name": "amethyst consumer",
-    "power.origins.form_ocelot_2_raw_meat_only.name": "raw meat consumer",
+    "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "amethyst consumer",
+    "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "raw meat consumer",
     "power.origins.vegetarian.name": "vegetarian",
-    "power.origins.form_familiar_fox_3_no_food.name": "Familiar Constitution",
+    "power.shape-shifter-curse.form_familiar_fox_3_no_food.name": "Familiar Constitution",
     "commands.shape-shifter-curse.form_not_found": "Specified form not found!",
     "codex.header.status": "Status",
     "codex.header.appearance": "Appearance",
