--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -189,9 +189,9 @@
     "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
     "effect.shape-shifter-curse.to_bat_0_effect.description": "你突然感到很困倦，也许你应该去睡一觉?",
     "commands.shape-shifter-curse.form_not_found": "未找到指定的形态！",
-    "power.origins.form_allay_sp_amethyst_shard_only.name": "水晶食性",
-    "power.origins.form_ocelot_2_raw_meat_only.name": "生肉食性",
-    "power.origins.form_familiar_fox_3_no_food.name": "使魔体质",
+    "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "水晶食性",
+    "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "生肉食性",
+    "power.shape-shifter-curse.form_familiar_fox_3_no_food.name": "使魔体质",
     "power.origins.vegetarian.name": "素食者",
     "codex.header.status": "状态",
     "codex.header.appearance": "外观",
