--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -422,8 +422,10 @@
     "text.autoconfig.shape-shifter-curse-custom.option.accentColor1Color": "Accent Color 1",
     "text.autoconfig.shape-shifter-curse-custom.option.accentColor2Color": "Accent Color 2",
     "text.autoconfig.shape-shifter-curse-custom.option.eyeColor": "Eye Color",
-    "text.autoconfig.shape-shifter-curse-custom.option.primaryOverrideStrength": "Primary Grayscale Enhancement",
-    "text.autoconfig.shape-shifter-curse-custom.option.accent1OverrideStrength": "Accent 1 Grayscale Enhancement",
-    "text.autoconfig.shape-shifter-curse-custom.option.accent2OverrideStrength": "Accent 2 Grayscale Enhancement"
+    "text.autoconfig.shape-shifter-curse-custom.option.primaryGreyReverse": "Primary Grayscale Reverse",
+    "text.autoconfig.shape-shifter-curse-custom.option.accent1GreyReverse": "Accent 1 Grayscale Reverse",
+    "text.autoconfig.shape-shifter-curse-custom.option.accent2GreyReverse": "Accent 2 Grayscale Reverse"
+
+
 
 }
