--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -422,7 +422,7 @@
     "text.autoconfig.shape-shifter-curse-custom.option.accentColor1Color": "重点色1",
     "text.autoconfig.shape-shifter-curse-custom.option.accentColor2Color": "重点色2",
     "text.autoconfig.shape-shifter-curse-custom.option.eyeColor": "眼睛颜色",
-    "text.autoconfig.shape-shifter-curse-custom.option.primaryOverrideStrength": "主要色灰度增强",
-    "text.autoconfig.shape-shifter-curse-custom.option.accent1OverrideStrength": "重点色1灰度增强",
-    "text.autoconfig.shape-shifter-curse-custom.option.accent2OverrideStrength": "重点色2灰度增强"
+    "text.autoconfig.shape-shifter-curse-custom.option.primaryGreyReverse": "主要色灰度反转",
+    "text.autoconfig.shape-shifter-curse-custom.option.accent1GreyReverse": "重点色1灰度反转",
+    "text.autoconfig.shape-shifter-curse-custom.option.accent2GreyReverse": "重点色2灰度反转"
 }
