--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -132,6 +132,7 @@
   "item.shape-shifter-curse.powerful_inhibitor.tooltip": "Contains enhanced golden magic",
   "item.shape-shifter-curse.creative_inhibitor": "Extreme Inhibitor",
   "item.shape-shifter-curse.creative_inhibitor.tooltip": "(Creative Item) Crafted by powers beyond this world, capable of reversing permanent forms",
+  "item.shape-shifter-curse.morphscale_core": "Morphscale Core",
   "item.shape-shifter-curse.morphscale_headring": "Morphscale Headring",
   "item.shape-shifter-curse.morphscale_vest": "Morphscale Vest",
   "item.shape-shifter-curse.morphscale_cuish": "Morphscale Cuish",
