--- a/PatronServer/PackRes/resource/assets/ssc-patron/lang/zh_cn.json
+++ b/PatronServer/PackRes/resource/assets/ssc-patron/lang/zh_cn.json
@@ -1,7 +1,8 @@
 {
-  "codex.form.example_namespace.example.title": "样例TITLE",
-  "codex.form.example_namespace.example.appearance": "样例Appearance",
-  "codex.form.example_namespace.example.pros": "样例Pros",
-  "codex.form.example_namespace.example.cons": "样例Cons",
-  "codex.form.example_namespace.example.instincts": "样例Instincts"
+  "codex.form.ssc-patron.example.title": "样例TITLE",
+  "codex.form.ssc-patron.example.appearance": "样例Appearance",
+  "codex.form.ssc-patron.example.pros": "样例Pros",
+  "codex.form.ssc-patron.example.cons": "样例Cons",
+  "codex.form.ssc-patron.example.instincts": "样例Instincts",
+  "codex.form.ssc-patron.example.name": "样例赞助者形态"
 }
