--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -195,6 +195,7 @@
   "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
   "effect.shape-shifter-curse.to_bat_0_effect.description": "你突然感到很困倦，也许你应该去睡一觉?",
   "commands.shape-shifter-curse.form_not_found": "未找到指定的形态！",
+  "power.shape-shifter-curse.carnivore.name":"肉食者",
   "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "水晶食性",
   "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "生肉食性",
   "power.shape-shifter-curse.form_familiar_fox_3_no_food.name": "使魔体质",
