--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -423,6 +423,7 @@
   "text.autoconfig.shape-shifter-curse-common.option.transformativeOcelotSpawnChance": "咒文豹猫刷新成功率",
   "text.autoconfig.shape-shifter-curse-common.option.enableNewStartBook": "启用新版幻形者之书界面",
   "text.autoconfig.shape-shifter-curse-common.option.curseMoonPhase": "诅咒之月月相",
+  "text.autoconfig.shape-shifter-curse-common.option.allowSleepInCursedMoon": "是否可以在诅咒之月中睡觉",
   "text.autoconfig.shape-shifter-curse-common.category.InDevelopment": "开发中配置",
   "text.autoconfig.shape-shifter-curse-custom.title": "幻形者诅咒 - 玩家自定义配置",
   "text.autoconfig.shape-shifter-curse-custom.option.keep_original_skin": "保留原版皮肤",
