--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -200,6 +200,8 @@
   "power.origins.vegetarian.name": "vegetarian",
   "power.shape-shifter-curse.form_familiar_fox_3_no_food.name": "Familiar Constitution",
   "power.shape-shifter-curse.prevent_ranged_weapon_use.name": "Prevent Ranged Weapon",
+  "power.shape-shifter-curse.no_shield.name": "Unwieldy",
+  "power.shape-shifter-curse.no_shield.description": "The way your hands are formed provide no way of holding a shield upright.",
   "power.shape-shifter-curse.form_vegetarian.name": "vegetarian",
   "commands.shape-shifter-curse.form_not_found": "Specified form not found!",
   "codex.header.status": "Status",
