Added translation for familiar fox 0

--- a/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/ru_ru.json
@@ -136,6 +136,7 @@
   "item.shape-shifter-curse.powerful_inhibitor.tooltip": "Содержит в себе улучшенную магию золота.",
   "item.shape-shifter-curse.creative_inhibitor": "Extreme Inhibitor",
   "item.shape-shifter-curse.creative_inhibitor.tooltip": "(Creative Item) Crafted by powers beyond this world, capable of reversing permanent forms",
+  "item.shape-shifter-curse.morphscale_core": "Morphscale Core",
   "item.shape-shifter-curse.morphscale_headring": "Morphscale Headring",
   "item.shape-shifter-curse.morphscale_vest": "Morphscale Vest",
   "item.shape-shifter-curse.morphscale_cuish": "Morphscale Cuish",
@@ -204,11 +205,14 @@
   "effect.shape-shifter-curse.to_chi_sp_effect": "CHI",
   "effect.shape-shifter-curse.to_phi_sp_effect": "PHI",
 
+  "power.shape-shifter-curse.form_carnivore.name":"Carnivore",
   "power.shape-shifter-curse.form_allay_sp_amethyst_shard_only.name": "amethyst consumer",
   "power.shape-shifter-curse.form_ocelot_2_raw_meat_only.name": "только сырое мясо",
   "power.origins.vegetarian.name": "вегетарианец",
   "power.origins.form_familiar_fox_3_no_food.name": "Familiar Constitution",
   "power.shape-shifter-curse.prevent_ranged_weapon_use.name": "Невозможно использовать дальнобойное оружие",
+  "power.shape-shifter-curse.no_shield.name": "Unwieldy",
+  "power.shape-shifter-curse.no_shield.description": "The way your hands are formed provide no way of holding a shield upright.",
   "power.shape-shifter-curse.form_vegetarian.name": "вегетарианец",
 
   "commands.shape-shifter-curse.form_not_found": "Указанная форма не найдена!",
@@ -348,15 +352,15 @@
   "codex.form.shape-shifter-curse.snow_fox_3.cons": "The cold magic that constitutes your body brings significant side effects:\nFire and heat are your greatest enemies. You take additional damage while burning, and fire on you won't extinguish naturally unless you enter water or extinguish it with a water bottle.\nDuring the daytime in hot desert biomes or the scorching Nether, your maximum health is drastically reduced. Furthermore, the warm Plains biome is now uncomfortably hot for you, reducing your maximum health while you are in it.\nWhen you are very close to lava or open flame, or in lava, you will gradually take damage, even with fire resistance effects.\nLeggings and boots no longer fit your quadrupedal body structure.\nWithout proper hands for tools, your block-breaking speed is slower\nYour fluffy fur further hinders your movement speed while swimming.",
   "codex.form.shape-shifter-curse.snow_fox_3.instincts": "",
 
-  "codex.form.shape-shifter-curse.familiar_fox_0.title": "\nThe curse has affected your body - orange-red fur patches are growing across your skin. You feel an urge to run across snowy plains",
-  "codex.form.shape-shifter-curse.familiar_fox_0.appearance": "Black soft fur grows at your extremities, gradually transitioning to orange-red as it spreads upward\nYour ears have shifted to the top of your head, becoming triangular and covered in black fur\nYour nails have grown sharper, standing out noticeably against the dark fur\nOrange-red fur patches appear sporadically across your body, most notably a red-and-white tuft growing from your lower back. When touched, you can feel hidden bony protrusions within",
-  "codex.form.shape-shifter-curse.familiar_fox_0.pros": "To your puzzlement, witches no longer seem hostile toward you\nYour body feels more energetic, granting increased running speed\nEnhanced perception helps you find more dropped items, roughly equivalent to Looting I",
-  "codex.form.shape-shifter-curse.familiar_fox_0.cons": "Your new fur growth slightly reduces your swimming speed\nStrangely, attacking witches causes unusual dizziness",
-  "codex.form.shape-shifter-curse.familiar_fox_0.instincts": "You begin to desire to sweet berries\nYou begin to desire to running across snow\nYou begin to desire to stay in taiga biomes",
+  "codex.form.shape-shifter-curse.familiar_fox_0.title": "\nПроклятие изменило ваше тело. Можно заметить, как у вас выросла оранжевая шерсть. Вы ощущаете странную тягу к заснеженным лесам.",
+  "codex.form.shape-shifter-curse.familiar_fox_0.appearance": "На руках и ногах выросла чёрная мягкая шерсть, которая постепенно переходит в оранжевую.\nВаши уши сдвинулись ближе к макушке. Они приобрели триугольную форму и покрылись чёрной шерстью.\nВаши ногти стали острее. Они очень сильно выделяются, несмотря на выросшую шерсть чёрного цвета.\nВремя от времени на вашем теле появляются оранжевые пятна. Также из вашего копчика вырос небольшой пучок шерсти. Если прикоснуться к нему, то можно узнать, что внутри этого пучка есть кости.",
+  "codex.form.shape-shifter-curse.familiar_fox_0.pros": "Почему-то ведьмы больше не нападают на вас.\nВы чувствуете прилив энергии - скорость бега увеличена.\nВаше чутьё помогает вам находить больше предметов. Это чем-то напоминает зачарование \"Добыча I\".",
+  "codex.form.shape-shifter-curse.familiar_fox_0.cons": "Ваша новая шерсть слегка уменьшает скорость передвижения в воде.\nСтранно. Если вы атакуете ведьму, вы почувствуете головокружение.",
+  "codex.form.shape-shifter-curse.familiar_fox_0.instincts": "Вы мечтаете поесть сладкие ягоды.\nВы мечтаете бегать по снегу.\nВы мечтаете остаться в тайге.",
   
-  "codex.form.shape-shifter-curse.familiar_fox_1.title": "\nOrange-red fur continues spreading across your body as a fluffy red tail sways behind you",
-  "codex.form.shape-shifter-curse.familiar_fox_1.appearance": "The orange-red pelt expands further across your body, nearly covering your limbs and upper torso with thick fur\nYour triangular ears have enlarged, sharpening your hearing. Red fur growing from their base now covers parts of your head and face like a mask\nYour hands and feet have grown larger, becoming more claw-like\nThe fur tuft at your tailbone has developed into a full fluffy tail that sways slowly\n\nWorryingly, beyond the usual shifting magic, you detect a new type of magic blending within you...",
-  "codex.form.shape-shifter-curse.familiar_fox_1.pros": "The foreign magic grants new abilities - you can now right-click while empty-handed to drain energy from weak creatures for hunger restoration\n\nAll illagers strangely show no hostility toward you\nYour running speed increases further, and your new fur protects you from sweet berry bushes\nSharper perception helps find more dropped items (~Looting II)",
+  "codex.form.shape-shifter-curse.familiar_fox_1.title": "\nОранжевая шерсть покрывает всё большую часть вашего тела. Сзади покачивается из стороны в сторону пушистый хвостик.",
+  "codex.form.shape-shifter-curse.familiar_fox_1.appearance": "Густая оранжевая шерсть теперь покрывает ваши руки и ноги, а также спину и грудную клетку.\nВаши уши стали больше - слух стал острее. Оранжевая шерсть покрывает также голову и лицо, создавая что-то наподобие маски.\nВаши кисти и стопы увеличились в размерах. Теперь они напоминают чем-то когти.\nПучок шерсти с костями развился в полноценный пушистый хвостик.\n\nПомимо обычной магии оборотня, вы ощущаете присутствие в своём теле какой-то иной магии...",
+  "codex.form.shape-shifter-curse.familiar_fox_1.pros": "Чужеродная магия даёт вам новые способности: нажав правую кнопку мыши, вы можете высушить жизненную энергию из слабых существ, чтобы утолить голод.\n\nРазбойники больше не атакуют вас.\nСкорость бега увеличена, а новая шерсть защищает вас от колючек ягодных кустов.\nОбострённое чутьё помогает вам находить больше предметов (как если бы вы использовали зачарование \"Добыча II\")",
   "codex.form.shape-shifter-curse.familiar_fox_1.cons": "The foreign magic affects your digestion, reducing hunger gained from food\nYour health is slightly reduced\nYour fur slows swimming slightly\nAttacking illagers now also start causes unusual dizziness",
   "codex.form.shape-shifter-curse.familiar_fox_1.instincts": "Thoughts of draining energy from creaturesbegin attracting you\nYou begin to desire to stay in taiga biomes\nThoughts of staying in sweet berry bushesbegin attracting you\nThe magic of witches and evokers draws you in - you feel compelled toapproach and observe them",
   
@@ -465,6 +469,7 @@
   "text.autoconfig.shape-shifter-curse-common.option.transformativeOcelotSpawnChance": "Вероятность появления проклятого оцелота",
   "text.autoconfig.shape-shifter-curse-common.option.enableNewStartBook": "Включить новую версию интерфейса стартовой книги",
   "text.autoconfig.shape-shifter-curse-common.option.curseMoonPhase": "Фаза проклятой луны",
+  "text.autoconfig.shape-shifter-curse-common.option.allowSleepInCursedMoon": "Allow Sleep In Curse Moon",
   "text.autoconfig.shape-shifter-curse-common.category.InDevelopment": "В разработке",
   "text.autoconfig.shape-shifter-curse-custom.title": "Shape Shifter Curse - Player Custom Config",
   "text.autoconfig.shape-shifter-curse-custom.option.keep_original_skin": "Keep Original Skin",
